fix scrollbar bug

--- a/app/public/styles/lightManage-statistics.less
+++ b/app/public/styles/lightManage-statistics.less
@@ -151,6 +151,8 @@
   text-anchor: middle;
   }
 .d3-tip {
+  top:0px;
+  left:0px;
   line-height: 1;
   font-size: 12px;
   padding: 12px;
